[package]
name = "atoman"
description = "This library provides a static data that can be accessed safely and concurrently from any part of your program"
keywords = ["atomic", "static", "flag", "state", "config"]
categories = ["development-tools", "rust-patterns"]
version = "0.1.4"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-atoman"
readme = "README.md"
edition = "2024"

[dependencies]
arc-swap = "1.8.0"
once_cell = "1.21.3"
macron = { version = "0.1.12", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.148", optional = true }
toml = { version = "0.9.8", optional = true }
log = { version = "0.4.29", optional = true }
chrono = { version = "0.4.42", optional = true }

[features]
full = ["config", "logger"]
config = ["json-config", "toml-config"]
json-config = ["dep:serde", "dep:serde_json"]
toml-config = ["dep:serde", "dep:toml"]
logger = ["dep:log", "dep:chrono"]
