[package]
name = "atoman"
description = "This library provides a static data that can be accessed safely and concurrently from any part of your program"
keywords = ["atomic", "static", "flag", "state", "config"]
categories = ["development-tools", "rust-patterns"]
version = "0.2.13"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-atoman"
readme = "README.md"
edition = "2024"

[dependencies]
arc-swap = "1.8.0"
once_cell = "1.21.3"
macron = { version = "0.1.17", features = ["derive", "string"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.148", optional = true }
toml = { version = "1.0.0", optional = true }
log = { version = "0.4.29", optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
futures = { version = "0.3.31", optional = true }
bytes = { version = "1.11.1", optional = true }
axum = { version = "0.8.8", optional = true }
regex = { version = "1.12.3", optional = true }
fuzzy-cmp = { version = "0.1.3", optional = true }

[features]
full = ["config", "logger", "trace", "stream", "file", "search"]
config = ["json-config", "toml-config"]
json-config = ["dep:serde", "dep:serde_json"]
toml-config = ["dep:serde", "dep:toml"]
logger = ["dep:log", "dep:chrono"]
trace = []
stream = ["dep:futures", "dep:bytes", "dep:serde", "dep:serde_json"]
server = ["stream", "dep:axum"]
file = ["dep:bytes", "dep:chrono", "dep:serde"]
search = ["dep:regex", "dep:fuzzy-cmp"]
